pacpci2_py.h

typedef void *HANDLE;
typedef unsigned char byte;
DLL_API void setStreamingEvents(HANDLE hEventStart, HANDLE hEventStop);
DLL_API void enablePolling(short enable);
DLL_API void enableWFSOutput(short enable);
DLL_API short isStreamingStarted(void);
DLL_API short isStreamingFinished(void);
DLL_API void rearmStreaming(void);
DLL_API short startWaveformStreaming(void);
DLL_API short stopWaveformStreaming(void);
DLL_API const byte *getSetupBuffer();
DLL_API unsigned short getSetupBufferSize();