PacPci2.py


# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 109
if _libs["PacPci2"].has("setStreamingEvents", "cdecl"):
    setStreamingEvents = _libs["PacPci2"].get("setStreamingEvents", "cdecl")
    setStreamingEvents.argtypes = [HANDLE, HANDLE]
    setStreamingEvents.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 110
if _libs["PacPci2"].has("enablePolling", "cdecl"):
    enablePolling = _libs["PacPci2"].get("enablePolling", "cdecl")
    enablePolling.argtypes = [c_short]
    enablePolling.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 111
if _libs["PacPci2"].has("enableWFSOutput", "cdecl"):
    enableWFSOutput = _libs["PacPci2"].get("enableWFSOutput", "cdecl")
    enableWFSOutput.argtypes = [c_short]
    enableWFSOutput.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 112
if _libs["PacPci2"].has("isStreamingStarted", "cdecl"):
    isStreamingStarted = _libs["PacPci2"].get("isStreamingStarted", "cdecl")
    isStreamingStarted.argtypes = []
    isStreamingStarted.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 113
if _libs["PacPci2"].has("isStreamingFinished", "cdecl"):
    isStreamingFinished = _libs["PacPci2"].get("isStreamingFinished", "cdecl")
    isStreamingFinished.argtypes = []
    isStreamingFinished.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 114
if _libs["PacPci2"].has("rearmStreaming", "cdecl"):
    rearmStreaming = _libs["PacPci2"].get("rearmStreaming", "cdecl")
    rearmStreaming.argtypes = []
    rearmStreaming.restype = None

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 115
if _libs["PacPci2"].has("startWaveformStreaming", "cdecl"):
    startWaveformStreaming = _libs["PacPci2"].get("startWaveformStreaming", "cdecl")
    startWaveformStreaming.argtypes = []
    startWaveformStreaming.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 116
if _libs["PacPci2"].has("stopWaveformStreaming", "cdecl"):
    stopWaveformStreaming = _libs["PacPci2"].get("stopWaveformStreaming", "cdecl")
    stopWaveformStreaming.argtypes = []
    stopWaveformStreaming.restype = c_short

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 118
if _libs["PacPci2"].has("getSetupBuffer", "cdecl"):
    getSetupBuffer = _libs["PacPci2"].get("getSetupBuffer", "cdecl")
    getSetupBuffer.argtypes = []
    getSetupBuffer.restype = POINTER(byte)

# C:\\Users\\12627\\Desktop\\PCI2Lib\\pacpci2_py.h: 119
if _libs["PacPci2"].has("getSetupBufferSize", "cdecl"):
    getSetupBufferSize = _libs["PacPci2"].get("getSetupBufferSize", "cdecl")
    getSetupBufferSize.argtypes = []
    getSetupBufferSize.restype = c_ushort

# No inserted files

# No prefix-stripping

